--- a/momapy/sbgn/styling/default.css
+++ b/momapy/sbgn/styling/default.css
@@ -245,7 +245,7 @@ ConsumptionLayout {
     stroke: black;
     stroke-width: 1.0;
     fill: none;
-    shorten: 0.0;
+    path_shorten: 0.0;
 }
 
 ProductionLayout {
@@ -255,7 +255,7 @@ ProductionLayout {
     arrowhead-stroke: black;
     arrowhead-stroke-width: 1.0;
     arrowhead-fill: black;
-    shorten: 1.0;
+    path_shorten: 1.0;
     width: 10.0;
     height: 10.0;
 }
@@ -267,7 +267,7 @@ ModulationLayout {
     arrowhead-stroke: black;
     arrowhead-stroke-width: 1.0;
     arrowhead-fill: white;
-    shorten: 1.0;
+    path_shorten: 1.0;
     width: 12.0;
     height: 12.0;
 }
@@ -279,7 +279,7 @@ StimulationLayout {
     arrowhead-stroke: black;
     arrowhead-stroke-width: 1.0;
     arrowhead-fill: white;
-    shorten: 1.0;
+    path_shorten: 1.0;
     width: 12.0;
     height: 12.0;
 }
@@ -291,7 +291,7 @@ CatalysisLayout {
     arrowhead-stroke: black;
     arrowhead-stroke-width: 1.0;
     arrowhead-fill: white;
-    shorten: 1.0;
+    path_shorten: 1.0;
     width: 12.0;
     height: 12.0;
 }
@@ -306,7 +306,7 @@ NecessaryStimulationLayout {
     bar-width: 1.0;
     bar-height: 12.0;
     sep: 2.0;
-    shorten: 1.0;
+    path_shorten: 1.0;
     width: 12.0;
     height: 12.0;
 }
@@ -318,7 +318,7 @@ InhibitionLayout {
     arrowhead-stroke: black;
     arrowhead-stroke-width: 1.0;
     arrowhead-fill: white;
-    shorten: 2.0;
+    path_shorten: 2.0;
     width: 1.5;
     height: 12.0;
 }
@@ -327,14 +327,14 @@ LogicArcLayout {
     stroke: black;
     stroke-width: 1.0;
     fill: none;
-    shorten: 0.0;
+    path_shorten: 0.0;
 }
 
 EquivalenceArcLayout {
     stroke: black;
     stroke-width: 1.0;
     fill: none;
-    shorten: 0.0;
+    path_shorten: 0.0;
 }
 
 MacromoleculeUnitOfInformationLayout {
@@ -418,7 +418,7 @@ UnknownInfluenceLayout {
     arrowhead-stroke: black;
     arrowhead-stroke-width: 1.0;
     arrowhead-fill: white;
-    shorten: 1.0;
+    path_shorten: 1.0;
     width: 12.0;
     height: 12.0;
 }
@@ -430,7 +430,7 @@ PositiveInfluenceLayout {
     arrowhead-stroke: black;
     arrowhead-stroke-width: 1.0;
     arrowhead-fill: white;
-    shorten: 1.0;
+    path_shorten: 1.0;
     width: 12.0;
     height: 12.0;
 }
@@ -445,7 +445,7 @@ NecessaryStimulationLayout {
     bar-width: 1.0;
     bar-height: 12.0;
     sep: 2.0;
-    shorten: 1.0;
+    path_shorten: 1.0;
     width: 12.0;
     height: 12.0;
 }
@@ -457,7 +457,7 @@ NegativeInfluenceLayout {
     arrowhead-stroke: black;
     arrowhead-stroke-width: 1.0;
     arrowhead-fill: white;
-    shorten: 2.0;
+    path_shorten: 2.0;
     width: 1.5;
     height: 12.0;
 }
