--- a/momapy/sbgn/styling/sbgned.css
+++ b/momapy/sbgn/styling/sbgned.css
@@ -341,7 +341,7 @@ ConsumptionLayout {
     stroke: black;
     stroke-width: 1.5;
     fill: none;
-    shorten: 0.0;
+    path_shorten: 0.0;
 }
 
 ProductionLayout {
@@ -351,7 +351,7 @@ ProductionLayout {
     arrowhead-stroke: black;
     arrowhead-stroke-width: 1.5;
     arrowhead-fill: black;
-    shorten: 1.0;
+    path_shorten: 1.0;
     width: 15.0;
     height: 15.0;
     filter: none;
@@ -364,7 +364,7 @@ ModulationLayout {
     arrowhead-stroke: black;
     arrowhead-stroke-width: 1.5;
     arrowhead-fill: white;
-    shorten: 1.0;
+    path_shorten: 1.0;
     width: 15.0;
     height: 15.0;
     filter: none;
@@ -377,7 +377,7 @@ StimulationLayout {
     arrowhead-stroke: black;
     arrowhead-stroke-width: 1.5;
     arrowhead-fill: white;
-    shorten: 1.0;
+    path_shorten: 1.0;
     width: 15.0;
     height: 15.0;
     filter: none;
@@ -390,7 +390,7 @@ CatalysisLayout {
     arrowhead-stroke: black;
     arrowhead-stroke-width: 1.5;
     arrowhead-fill: white;
-    shorten: 4.0;
+    path_shorten: 4.0;
     width: 13.0;
     height: 13.0;
     filter: none;
@@ -406,7 +406,7 @@ NecessaryStimulationLayout {
     bar-width: 1.5;
     bar-height: 24.0;
     sep: 7.0;
-    shorten: 1.0;
+    path_shorten: 1.0;
     width: 15.0;
     height: 15.0;
     filter: none;
@@ -419,7 +419,7 @@ InhibitionLayout {
     arrowhead-stroke: black;
     arrowhead-stroke-width: 1.5;
     arrowhead-fill: white;
-    shorten: 6.0;
+    path_shorten: 6.0;
     width: 1.5;
     height: 15.0;
     filter: none;
@@ -429,7 +429,7 @@ LogicArcLayout {
     stroke: black;
     stroke-width: 2.0;
     fill: none;
-    shorten: 0.0;
+    path_shorten: 0.0;
     filter: none;
 }
 
@@ -437,7 +437,7 @@ EquivalenceArcLayout {
     stroke: black;
     stroke-width: 2.0;
     fill: none;
-    shorten: 0.0;
+    path_shorten: 0.0;
     filter: none;
 }
 
@@ -531,7 +531,7 @@ UnknownInfluenceLayout {
     arrowhead-stroke: black;
     arrowhead-stroke-width: 1.5;
     arrowhead-fill: white;
-    shorten: 1.0;
+    path_shorten: 1.0;
     width: 15.0;
     height: 15.0;
     filter: none;
@@ -544,7 +544,7 @@ PositiveInfluenceLayout {
     arrowhead-stroke: black;
     arrowhead-stroke-width: 1.5;
     arrowhead-fill: white;
-    shorten: 1.0;
+    path_shorten: 1.0;
     width: 15.0;
     height: 15.0;
     filter: none;
@@ -557,7 +557,7 @@ NegativeInfluenceLayout {
     arrowhead-stroke: black;
     arrowhead-stroke-width: 1.5;
     arrowhead-fill: white;
-    shorten: 6.0;
+    path_shorten: 6.0;
     width: 1.5;
     height: 15.0;
     filter: none;
