newt.css: now built with @import cs_black_and_white and newt_no_cs

--- a/momapy/sbgn/styling/newt.css
+++ b/momapy/sbgn/styling/newt.css
@@ -1,575 +1,2 @@
-TextLayout {
-    font-family: "Helvetica";
-    font-size: 11;
-    font-color: black;
-}
-
-MapLayout {
-    stroke: none;
-    stroke-width: 2;
-    fill: white;
-    filter: none;
-}
-
-CompartmentLayout {
-    stroke: black;
-    stroke-width: 7;
-    fill: white;
-    rounded-corners: 20;
-    filter: none;
-}
-
-GenericProcessLayout {
-    width: 20;
-    height: 20;
-    stroke: black;
-    stroke-width: 1.25;
-    fill: white;
-    left-connector-length: 3;
-    right-connector-length: 3;
-    left-connector-stroke-width: 1.25;
-    right-connector-stroke-width: 1.25;
-    filter: none;
-}
-
-UncertainProcessLayout {
-    width: 24;
-    height: 24;
-    stroke: black;
-    stroke-width: 2;
-    fill: white;
-    left-connector-length: 10;
-    right-connector-length: 10;
-    left-connector-stroke-width: 1.5;
-    right-connector-stroke-width: 1.5;
-    filter: none;
-}
-
-OmittedProcessLayout {
-    width: 24;
-    height: 24;
-    stroke: black;
-    stroke-width: 2;
-    fill: white;
-    left-connector-length: 10;
-    right-connector-length: 10;
-    left-connector-stroke-width: 1.5;
-    right-connector-stroke-width: 1.5;
-    filter: none;
-}
-
-AssociationLayout {
-    width: 24;
-    height: 24;
-    stroke: black;
-    stroke-width: 2;
-    fill: black;
-    left-connector-length: 10;
-    right-connector-length: 10;
-    left-connector-stroke-width: 1.5;
-    right-connector-stroke-width: 1.5;
-    filter: none;
-}
-
-DissociationLayout {
-    width: 24;
-    height: 24;
-    stroke: black;
-    stroke-width: 2;
-    fill: white;
-    sep: 4.5;
-    left-connector-length: 10;
-    right-connector-length: 10;
-    left-connector-stroke-width: 1.5;
-    right-connector-stroke-width: 1.5;
-    filter: none;
-}
-
-PhenotypeLayout {
-    width: 108;
-    height: 60;
-    stroke: black;
-    stroke-width: 2;
-    fill: white;
-    angle: 60;
-    filter: none;
-}
-
-AndOperatorLayout {
-    width: 30;
-    height: 30;
-    stroke: black;
-    stroke-width: 2;
-    fill: white;
-    left-connector-length: 10;
-    right-connector-length: 10;
-    left-connector-stroke-width: 1.5;
-    right-connector-stroke-width: 1.5;
-    filter: none;
-}
-
-OrOperatorLayout {
-    width: 30;
-    height: 30;
-    stroke: black;
-    stroke-width: 2;
-    fill: white;
-    left-connector-length: 10;
-    right-connector-length: 10;
-    left-connector-stroke-width: 1.5;
-    right-connector-stroke-width: 1.5;
-    filter: none;
-}
-
-NotOperatorLayout {
-    width: 30;
-    height: 42;
-    stroke: black;
-    stroke-width: 2;
-    fill: white;
-    left-connector-length: 10;
-    right-connector-length: 10;
-    left-connector-stroke-width: 1.5;
-    right-connector-stroke-width: 1.5;
-    filter: none;
-}
-
-EquivalenceOperatorLayout {
-    width: 30;
-    height: 30;
-    stroke: black;
-    stroke-width: 2;
-    fill: white;
-    left-connector-length: 10;
-    right-connector-length: 10;
-    left-connector-stroke-width: 1.5;
-    right-connector-stroke-width: 1.5;
-    filter: none;
-}
-
-UnspecifiedEntityLayout {
-    width: 60;
-    height: 30;
-    stroke: black;
-    stroke-width: 1.25;
-    fill: white;
-    filter: none;
-}
-
-MacromoleculeLayout {
-    width: 60;
-    height: 30;
-    stroke: black;
-    stroke-width: 1.25;
-    fill: white;
-    rounded-corners: 9;
-    filter: none;
-}
-
-MacromoleculeMultimerLayout {
-    width: 113;
-    height: 65;
-    stroke: black;
-    stroke-width: 2;
-    fill: white;
-    rounded-corners: 9;
-    offset: 10;
-    filter: none;
-}
-
-ComplexLayout {
-    width: 216;
-    height: 120;
-    stroke: black;
-    stroke-width: 2;
-    fill: white;
-    cut-corners: 10;
-    filter: none;
-}
-
-ComplexLayout > TextLayout {
-    font-size: 14;
-}
-
-ComplexMultimerLayout {
-    width: 221;
-    height: 125;
-    stroke: black;
-    stroke-width: 2;
-    fill: white;
-    cut-corners: 10;
-    offset: 10;
-    filter: none;
-}
-
-SimpleChemicalLayout {
-    width: 30;
-    height: 30;
-    stroke: black;
-    stroke-width: 1.25;
-    fill: white;
-    filter: none;
-}
-
-SimpleChemicalMultimerLayout {
-    width: 65;
-    height: 65;
-    stroke: black;
-    stroke-width: 2;
-    fill: white;
-    offset: 10;
-    filter: none;
-}
-
-NucleicAcidFeatureLayout {
-    width: 108;
-    height: 60;
-    stroke: black;
-    stroke-width: 2;
-    fill: white;
-    rounded-corners: 9;
-    filter: none;
-}
-
-NucleicAcidFeatureMultimerLayout {
-    width: 113;
-    height: 65;
-    stroke: black;
-    stroke-width: 2;
-    fill: white;
-    rounded-corners: 9;
-    offset: 10;
-    filter: none;
-}
-
-EmptySetLayout {
-    width: 60;
-    height: 60;
-    stroke: black;
-    stroke-width: 2;
-    fill: white;
-    filter: none;
-}
-
-PerturbingAgentLayout {
-    width: 108;
-    height: 60;
-    stroke: black;
-    stroke-width: 2;
-    fill: white;
-    angle: 60;
-    filter: none;
-}
-
-StateVariableLayout {
-    width: 12;
-    height: 12;
-    stroke: black;
-    stroke-width: 1;
-    fill: white;
-    filter: none;
-}
-
-UnitOfInformationLayout {
-    width: 12;
-    height: 12;
-    stroke: black;
-    stroke-width: 1;
-    fill: white;
-    filter: none;
-}
-
-CardinalityLayout {
-    width: 23.5;
-    height: 18.5;
-    stroke: black;
-    stroke-width: 1.5;
-    fill: white;
-    filter: none;
-}
-
-SubmapLayout {
-    width: 216;
-    height: 120;
-    stroke: black;
-    stroke-width: 2;
-    fill: white;
-    filter: none;
-}
-
-TagLayout {
-    width: 108;
-    height: 60;
-    stroke: black;
-    stroke-width: 2;
-    fill: white;
-    angle: 60;
-    filter: none;
-}
-
-TerminalLayout {
-    width: 108;
-    height: 60;
-    stroke: black;
-    stroke-width: 2;
-    fill: white;
-    angle: 60;
-    filter: none;
-}
-
-TagLayout > TextLayout {
-    font-size: 12;
-}
-
-SubmapTerminalLayout > TextLayout {
-    font-size: 12;
-}
-
-StateVariableLayout > TextLayout {
-    font-family: "Arial";
-    font-size: 9;
-}
-
-UnitOfInformationLayout > TextLayout {
-    font-size: 9;
-}
-
-CardinalityLayout > TextLayout {
-    font-size: 12;
-}
-
-ConsumptionLayout {
-    stroke: black;
-    stroke-width: 1.25;
-    fill: none;
-    path_shorten: 0;
-    filter: none;
-}
-
-ProductionLayout {
-    stroke: black;
-    stroke-width: 1.25;
-    fill: none;
-    arrowhead-stroke: black;
-    arrowhead-stroke-width: 1.25;
-    arrowhead-fill: black;
-    path_shorten: 1;
-    width: 10;
-    height: 10;
-    filter: none;
-}
-
-ModulationLayout {
-    stroke: black;
-    stroke-width: 1.5;
-    fill: none;
-    arrowhead-stroke: black;
-    arrowhead-stroke-width: 1.5;
-    arrowhead-fill: white;
-    path_shorten: 1;
-    width: 15;
-    height: 15;
-    filter: none;
-}
-
-StimulationLayout {
-    stroke: black;
-    stroke-width: 1.5;
-    fill: none;
-    arrowhead-stroke: black;
-    arrowhead-stroke-width: 1.5;
-    arrowhead-fill: white;
-    path_shorten: 1;
-    width: 15;
-    height: 15;
-    filter: none;
-}
-
-CatalysisLayout {
-    stroke: black;
-    stroke-width: 1.25;
-    fill: white;
-    arrowhead-stroke: black;
-    arrowhead-stroke-width: 1.25;
-    arrowhead-fill: white;
-    path_shorten: 1;
-    width: 12;
-    height: 12;
-    filter: none;
-}
-
-NecessaryStimulationLayout {
-    stroke: black;
-    stroke-width: 1.5;
-    fill: white;
-    arrowhead-stroke: black;
-    arrowhead-stroke-width: 1.5;
-    arrowhead-fill: white;
-    bar-width: 1.5;
-    bar-height: 24;
-    sep: 7;
-    path_shorten: 1;
-    width: 15;
-    height: 15;
-    filter: none;
-}
-
-InhibitionLayout {
-    stroke: black;
-    stroke-width: 1.5;
-    fill: none;
-    arrowhead-stroke: black;
-    arrowhead-stroke-width: 1.5;
-    arrowhead-fill: white;
-    path_shorten: 6;
-    width: 1.5;
-    height: 15;
-    filter: none;
-}
-
-LogicArcLayout {
-    stroke: black;
-    stroke-width: 2;
-    fill: none;
-    path_shorten: 0;
-    filter: none;
-}
-
-EquivalenceArcLayout {
-    stroke: black;
-    stroke-width: 2;
-    fill: none;
-    path_shorten: 0;
-    filter: none;
-}
-
-MacromoleculeUnitOfInformationLayout {
-    stroke: black;
-    stroke-width: 2;
-    fill: white;
-    rounded-corners: 3;
-    filter: none;
-}
-
-UnspecifiedEntityUnitOfInformationLayout {
-    stroke: black;
-    stroke-width: 2;
-    fill: white;
-    filter: none;
-}
-
-NucleicAcidFeatureUnitOfInformationLayout {
-    stroke: black;
-    stroke-width: 2;
-    fill: white;
-    rounded-corners: 3;
-    filter: none;
-}
-
-ComplexUnitOfInformationLayout {
-    stroke: black;
-    stroke-width: 2;
-    fill: white;
-    cut-corners: 3;
-    filter: none;
-}
-
-SimpleChemicalUnitOfInformationLayout {
-    stroke: black;
-    stroke-width: 2;
-    fill: white;
-    filter: none;
-}
-
-PerturbationUnitOfInformationLayout {
-    stroke: black;
-    stroke-width: 2;
-    fill: white;
-    angle: 60;
-    filter: none;
-}
-
-MacromoleculeUnitOfInformationLayout > TextLayout {
-    font-size: 10;
-}
-
-UnspecifiedEntityUnitOfInformationLayout > TextLayout {
-    font-size: 10;
-}
-
-NucleicAcidFeatureUnitOfInformationLayout > TextLayout {
-    font-size: 10;
-}
-
-ComplexUnitOfInformationLayout > TextLayout {
-    font-size: 10;
-}
-
-SimpleChemicalUnitOfInformationLayout > TextLayout {
-    font-size: 10;
-}
-
-PerturbationUnitOfInformationLayout > TextLayout {
-    font-size: 10;
-}
-
-DelayOperatorLayout {
-    width: 30;
-    height: 30;
-    stroke: black;
-    stroke-width: 2;
-    fill: white;
-    left-connector-length: 10;
-    right-connector-length: 10;
-    left-connector-stroke-width: 1.5;
-    right-connector-stroke-width: 1.5;
-    filter: none;
-}
-
-UnknownInfluenceLayout {
-    stroke: black;
-    stroke-width: 1.5;
-    fill: none;
-    arrowhead-stroke: black;
-    arrowhead-stroke-width: 1.5;
-    arrowhead-fill: white;
-    path_shorten: 1;
-    width: 15;
-    height: 15;
-    filter: none;
-}
-
-PositiveInfluenceLayout {
-    stroke: black;
-    stroke-width: 1.5;
-    fill: none;
-    arrowhead-stroke: black;
-    arrowhead-stroke-width: 1.5;
-    arrowhead-fill: white;
-    path_shorten: 1;
-    width: 15;
-    height: 15;
-    filter: none;
-}
-
-NegativeInfluenceLayout {
-    stroke: black;
-    stroke-width: 1.5;
-    fill: none;
-    arrowhead-stroke: black;
-    arrowhead-stroke-width: 1.5;
-    arrowhead-fill: white;
-    path_shorten: 6;
-    width: 1.5;
-    height: 15;
-    filter: none;
-}
-
-BiologicalActivityLayout {
-    width: 108;
-    height: 60;
-    stroke: black;
-    stroke-width: 2;
-    fill: white;
-    filter: none;
-}
+@import "newt_no_cs.css";
+@import "cs_black_and_white.css";
