--- a/src/momapy/sbgn/styling/cs_black_and_white.css
+++ b/src/momapy/sbgn/styling/cs_black_and_white.css
@@ -1,550 +1,550 @@
 AndOperatorLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
 	left-connector-fill: unset;
 	left-connector-stroke: unset;
 	right-connector-fill: unset;
 	right-connector-stroke: unset;
-	stroke: unset;
+	group-stroke: unset;
 }
 
 
 AssociationLayout {
-	border-fill: black;
-	border-stroke: black;
-	fill: unset;
+	fill: black;
+	stroke: black;
+	group-fill: unset;
 	left-connector-fill: unset;
 	left-connector-stroke: unset;
 	right-connector-fill: unset;
 	right-connector-stroke: unset;
-	stroke: unset;
+	group-stroke: unset;
 }
 
 
 BiologicalActivityLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
-	stroke: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
+	group-stroke: unset;
 }
 
 
 CardinalityLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
-	stroke: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
+	group-stroke: unset;
 }
 
 
 CatalysisLayout {
 	arrowhead-fill: white;
 	arrowhead-stroke: black;
-	fill: unset;
+	group-fill: unset;
 	path-fill: none;
 	path-stroke: black;
-	stroke: unset;
+	group-stroke: unset;
 }
 
 
 CompartmentLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
-	stroke: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
+	group-stroke: unset;
 }
 
 
 ComplexLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
-	stroke: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
+	group-stroke: unset;
 }
 
 
 ComplexMultimerLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
-	stroke: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
+	group-stroke: unset;
 	subunits-fill: unset;
 	subunits-stroke: unset;
 }
 
 
 ComplexMultimerSubunitLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
-	stroke: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
+	group-stroke: unset;
 	subunits-fill: unset;
 	subunits-stroke: unset;
 }
 
 
 ComplexSubunitLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
-	stroke: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
+	group-stroke: unset;
 }
 
 
 ComplexUnitOfInformationLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
-	stroke: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
+	group-stroke: unset;
 }
 
 
 ConsumptionLayout {
 	arrowhead-fill: white;
 	arrowhead-stroke: black;
-	fill: unset;
+	group-fill: unset;
 	path-fill: none;
 	path-stroke: black;
-	stroke: unset;
+	group-stroke: unset;
 }
 
 
 DelayOperatorLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
 	left-connector-fill: unset;
 	left-connector-stroke: unset;
 	right-connector-fill: unset;
 	right-connector-stroke: unset;
-	stroke: unset;
+	group-stroke: unset;
 }
 
 
 DissociationLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
 	left-connector-fill: unset;
 	left-connector-stroke: unset;
 	right-connector-fill: unset;
 	right-connector-stroke: unset;
-	stroke: unset;
+	group-stroke: unset;
 }
 
 
 EmptySetLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
-	stroke: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
+	group-stroke: unset;
 }
 
 
 EquivalenceArc {
 	arrowhead-fill: unset;
 	arrowhead-stroke: unset;
-	fill: unset;
+	group-fill: unset;
 	path-fill: unset;
 	path-stroke: unset;
-	stroke: unset;
+	group-stroke: unset;
 }
 
 
 EquivalenceOperatorLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
 	left-connector-fill: unset;
 	left-connector-stroke: unset;
 	right-connector-fill: unset;
 	right-connector-stroke: unset;
-	stroke: unset;
+	group-stroke: unset;
 }
 
 
 GenericProcessLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
 	left-connector-fill: unset;
 	left-connector-stroke: unset;
 	right-connector-fill: unset;
 	right-connector-stroke: unset;
-	stroke: unset;
+	group-stroke: unset;
 }
 
 
 InhibitionLayout {
 	arrowhead-fill: white;
 	arrowhead-stroke: black;
-	fill: unset;
+	group-fill: unset;
 	path-fill: none;
 	path-stroke: black;
-	stroke: unset;
+	group-stroke: unset;
 }
 
 
 LogicArc {
 	arrowhead-fill: unset;
 	arrowhead-stroke: unset;
-	fill: unset;
+	group-fill: unset;
 	path-fill: unset;
 	path-stroke: unset;
-	stroke: unset;
+	group-stroke: unset;
 }
 
 
 MacromoleculeLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
-	stroke: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
+	group-stroke: unset;
 }
 
 
 MacromoleculeMultimerLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
-	stroke: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
+	group-stroke: unset;
 	subunits-fill: unset;
 	subunits-stroke: unset;
 }
 
 
 MacromoleculeMultimerSubunitLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
-	stroke: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
+	group-stroke: unset;
 	subunits-fill: unset;
 	subunits-stroke: unset;
 }
 
 
 MacromoleculeSubunitLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
-	stroke: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
+	group-stroke: unset;
 }
 
 
 MacromoleculeUnitOfInformationLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
-	stroke: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
+	group-stroke: unset;
 }
 
 
 ModulationLayout {
 	arrowhead-fill: white;
 	arrowhead-stroke: black;
-	fill: unset;
+	group-fill: unset;
 	path-fill: none;
 	path-stroke: black;
-	stroke: unset;
+	group-stroke: unset;
 }
 
 
 NecessaryStimulationLayout {
 	arrowhead-fill: white;
 	arrowhead-stroke: black;
-	fill: unset;
+	group-fill: unset;
 	path-fill: none;
 	path-stroke: black;
-	stroke: unset;
+	group-stroke: unset;
 }
 
 
 NegativeInfluenceLayout {
 	arrowhead-fill: white;
 	arrowhead-stroke: black;
-	fill: unset;
+	group-fill: unset;
 	path-fill: none;
 	path-stroke: black;
-	stroke: unset;
+	group-stroke: unset;
 }
 
 
 NotOperatorLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
 	left-connector-fill: unset;
 	left-connector-stroke: unset;
 	right-connector-fill: unset;
 	right-connector-stroke: unset;
-	stroke: unset;
+	group-stroke: unset;
 }
 
 
 NucleicAcidFeatureLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
-	stroke: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
+	group-stroke: unset;
 }
 
 
 NucleicAcidFeatureMultimerLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
-	stroke: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
+	group-stroke: unset;
 	subunits-fill: unset;
 	subunits-stroke: unset;
 }
 
 
 NucleicAcidFeatureMultimerSubunitLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
-	stroke: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
+	group-stroke: unset;
 	subunits-fill: unset;
 	subunits-stroke: unset;
 }
 
 
 NucleicAcidFeatureSubunitLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
-	stroke: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
+	group-stroke: unset;
 }
 
 
 NucleicAcidFeatureUnitOfInformationLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
-	stroke: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
+	group-stroke: unset;
 }
 
 
 OmittedProcessLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
 	left-connector-fill: unset;
 	left-connector-stroke: unset;
 	right-connector-fill: unset;
 	right-connector-stroke: unset;
-	stroke: unset;
+	group-stroke: unset;
 }
 
 
 OrOperatorLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
 	left-connector-fill: unset;
 	left-connector-stroke: unset;
 	right-connector-fill: unset;
 	right-connector-stroke: unset;
-	stroke: unset;
+	group-stroke: unset;
 }
 
 
 PerturbationUnitOfInformationLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
-	stroke: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
+	group-stroke: unset;
 }
 
 
 PerturbingAgentLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
-	stroke: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
+	group-stroke: unset;
 }
 
 
 PhenotypeLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
-	stroke: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
+	group-stroke: unset;
 }
 
 
 PositiveInfluenceLayout {
 	arrowhead-fill: white;
 	arrowhead-stroke: black;
-	fill: unset;
+	group-fill: unset;
 	path-fill: none;
 	path-stroke: black;
-	stroke: unset;
+	group-stroke: unset;
 }
 
 
 ProductionLayout {
 	arrowhead-fill: black;
 	arrowhead-stroke: black;
-	fill: unset;
+	group-fill: unset;
 	path-fill: none;
 	path-stroke: black;
-	stroke: unset;
+	group-stroke: unset;
 }
 
 
 SBGNAFLayout {
-	border-fill: white;
-	border-stroke: unset;
-	fill: unset;
+	fill: white;
 	stroke: unset;
+	group-fill: unset;
+	group-stroke: unset;
 }
 
 
 SBGNPDLayout {
-	border-fill: white;
-	border-stroke: unset;
-	fill: unset;
+	fill: white;
 	stroke: unset;
+	group-fill: unset;
+	group-stroke: unset;
 }
 
 
 SimpleChemicalLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
-	stroke: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
+	group-stroke: unset;
 }
 
 
 SimpleChemicalMultimerLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
-	stroke: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
+	group-stroke: unset;
 	subunits-fill: unset;
 	subunits-stroke: unset;
 }
 
 
 SimpleChemicalMultimerSubunitLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
-	stroke: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
+	group-stroke: unset;
 	subunits-fill: unset;
 	subunits-stroke: unset;
 }
 
 
 SimpleChemicalSubunitLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
-	stroke: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
+	group-stroke: unset;
 }
 
 
 SimpleChemicalUnitOfInformationLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
-	stroke: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
+	group-stroke: unset;
 }
 
 
 StateVariableLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
-	stroke: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
+	group-stroke: unset;
 }
 
 
 StimulationLayout {
 	arrowhead-fill: unset;
 	arrowhead-stroke: unset;
-	fill: unset;
+	group-fill: unset;
 	path-fill: unset;
 	path-stroke: unset;
-	stroke: unset;
+	group-stroke: unset;
 }
 
 
 SubmapLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
-	stroke: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
+	group-stroke: unset;
 }
 
 
 TagLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
-	stroke: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
+	group-stroke: unset;
 }
 
 
 TerminalLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
-	stroke: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
+	group-stroke: unset;
 }
 
 
 UncertainProcessLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
 	left-connector-fill: unset;
 	left-connector-stroke: unset;
 	right-connector-fill: unset;
 	right-connector-stroke: unset;
-	stroke: unset;
+	group-stroke: unset;
 }
 
 
 UnitOfInformationLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
-	stroke: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
+	group-stroke: unset;
 }
 
 
 UnknownInfluenceLayout {
 	arrowhead-fill: white;
 	arrowhead-stroke: black;
-	fill: unset;
+	group-fill: unset;
 	path-fill: none;
 	path-stroke: black;
-	stroke: unset;
+	group-stroke: unset;
 }
 
 
 UnspecifiedEntityLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
-	stroke: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
+	group-stroke: unset;
 }
 
 
 UnspecifiedEntitySubunitLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
-	stroke: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
+	group-stroke: unset;
 }
 
 
 UnspecifiedEntityUnitOfInformationLayout {
-	border-fill: white;
-	border-stroke: black;
-	fill: unset;
-	stroke: unset;
+	fill: white;
+	stroke: black;
+	group-fill: unset;
+	group-stroke: unset;
 }
